# hpr-blas

./: .gitignore  CMakeLists.txt  HPR_BLASConfig.cmake  README.md  build.sh  set_env.sh
.github/: FUNDING.yml
L1/: CMakeLists.txt  axpy.cpp  dot.cpp
L2/: CMakeLists.txt  mv.cpp
L3/: common.hpp  lu_decomposition.cpp  matmul.cpp  matmul_morton.cpp  matrix_types.cpp  mm.cpp
applications/: CMakeLists.txt
applications/apf/: CMakeLists.txt  README.md  cpp_apfloat.cpp  cpp_int.cpp  foreach.cpp  gnu_float128.cpp
applications/blas/: CMakeLists.txt  cholesky.cpp  common.hpp  fused_dot.cpp  fused_dot_product.cpp  fused_mm.cpp  fused_mv.cpp  gaussian_elimination.cpp  hilbert_matrix.cpp  kronecker_product.cpp  l1_axpy.cpp  l1_fused_dot.cpp  l2_fused_mv.cpp  l3_fused_lu.cpp  l3_fused_mm.cpp  linpack_unchained.cpp  lu_decomposition.cpp
applications/calculus/: CMakeLists.txt  common.hpp  finite_difference.cpp
applications/dsp/: CMakeLists.txt  common.hpp  fft.cpp  fir_filter.cpp
applications/estimation/: CMakeLists.txt  common.hpp  kalman.hpp  kalman_filter.cpp
applications/integer/: CMakeLists.txt  README.md  binomial_coefficients.cpp  common.hpp  factorial.cpp
applications/matpak/: CMakeLists.txt  README.md  bands.cpp  checkerboard.cpp  diag.cpp  diam.cpp  ek.cpp  elemat.cpp  fliplr.cpp  fliptranspose.cpp  flipud.cpp  gt.cpp  hadamard.cpp  hankel.cpp  iscentro.cpp  isdiagdom.cpp  isequal.cpp  ism.cpp  isnormal.cpp  kron.cpp  main.cpp  matadd.cpp  ones.cpp  playground.cpp  reshape.cpp  rot90.cpp  rowsto.cpp  size.cpp  sum.cpp  template.cpp  test_ism.cpp  tests.cpp  toeplitz.cpp  vector1.cpp  vector_ops.cpp  vector_sum_test.cpp
applications/mlp/: CMakeLists.txt  README.md  common.hpp  neural_network.cpp
applications/numerical/: CMakeLists.txt  README.md  catastrophic_cancellation.cpp  common.hpp  conjugate_gradient.cpp  exponentiation.cpp  factorial.cpp  goldberg_thin_triangle.cpp  integer_cover.cpp  newton_raphson.cpp  rounding_error_addition.cpp  sterbenz_lemma.cpp  sum_of_integers.cpp  thin_triangle.cpp  two_sum.cpp
applications/polynomial/: CMakeLists.txt  README.md  bernstein.cpp  challenge.cpp  chebyshev.cpp
applications/stdlib/: CMakeLists.txt  log.cpp
benchmarks/: CMakeLists.txt
benchmarks/arithmetic/: CMakeLists.txt  performance.cpp
blas/: CMakeLists.txt  blas.hpp  blas_utils.hpp  hprblas  lu_decomposition.hpp  matrix_utils.hpp
blas/L0/: CMakeLists.txt  fam.cpp  fma.cpp
blas/L1/: CMakeLists.txt  asum.cpp  axpy.cpp  dot.cpp  l1_dot.cpp
blas/L2/: CMakeLists.txt  mv.cpp
blas/L3/: CMakeLists.txt  blocked_matrix.cpp  common.hpp  gauss_jordan.cpp  lu_decomposition.cpp  matmul.cpp  matmul_morton.cpp  matrix_types.cpp
c_api/lib/: CMakeLists.txt  hprblas_c_api.cpp
c_api/test/: CMakeLists.txt  matmul.c
cmake/: Banners.cmake  Config.cmake  hprblas-logos.txt
fma/: CMakeLists.txt  fma.cpp
include/: blas.hpp  blas_utils.hpp  cholesky.hpp  hprblas  hprblas.h  hprblas.hpp  lu_decomposition.hpp  matrix_utils.hpp  mtl_extensions.hpp  norms.hpp  print_utils.hpp  vector_utils.hpp
include/generators/: matrix_generators.hpp
include/matpak/: all.hpp  bands.hpp  checkerboard.hpp  contents.md  ek.hpp  elemat.hpp  fliplr.hpp  fliptranspose.hpp  flipud.hpp  gt.hpp  hadamard.hpp  hankel.hpp  iscentro.hpp  isdiagdom.hpp  isequal.hpp  ism.hpp  isnonneg.hpp  isnormal.hpp  kron.hpp  lt.hpp  ones.hpp  relop.hpp  reshape.hpp  rot90.hpp  rowsto.hpp  size.hpp  sum.hpp  toeplitz.hpp
include/matpak/isa/: iscentro.hpp  isdiagdom.hpp  isequal.hpp  isirred.hpp  isnormal.hpp
include/polynomials/: README.md  bernstein.hpp
include/solvers/: cholesky.hpp  gauss_jordan.hpp  ldlt.hpp  lu_decomposition.hpp  qr.hpp
include/utils/: matrix_utils.hpp  matvec.hpp  print_utils.hpp  vector_utils.hpp
solvers/: CMakeLists.txt  README.md  cholesky.cpp  gauss_jordan.cpp  gaussian_elimination.cpp  multi_precision.cpp
tests/: posit_test_helpers.hpp
tests/posit/: 128bit_posit.cpp  48bit_posit.cpp  64bit_posit.cpp  big_posits.cpp
tools/benchmark/: CMakeLists.txt  error.cpp  number_systems.cpp  perf.cpp
tools/characterization/: 12-threads-16core-Ryzen.txt  16-threads-16core-Ryzen.txt  CMakeLists.txt  fts_cache_test.cpp
tools/cmake/: HPRBLASCommon.cmake  HPR_BLASCommon.cmake
tools/matrix_generation/: CMakeLists.txt  asymmetric.cpp  symmetric.cpp  test.cpp  uniform_random.cpp
