add_subdirectory("blas")
add_subdirectory("dsp")
add_subdirectory("mlp")
add_subdirectory("estimation")
add_subdirectory("numerical")
add_subdirectory("polynomial")
add_subdirectory("calculus")
add_subdirectory("integer")
add_subdirectory("stdlib")
add_subdirectory("matpak")
add_subdirectory("apf")
